<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">音效</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	
    <string name="yaogun">yaogun</string>
    <string name="liuxin">liuxin</string>
    <string name="jieshi">jieshi</string>
    <string name="jindian">jindian</string>
    <string name="reset">reset</string>
    
</resources>
